# ha-champ

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  README.md  after_black.txt  after_isort.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  sonar-project.properties  validate_champ.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sonarcloud.yml
custom_components/champ/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  switch.py  utils.py
custom_components/champ/translations/: de.json  en.json
docs/: INSTALL.md  QUICK_REFERENCE.md
tests/: conftest.py  test_init.py
